// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationErrorMessage renders an error for a custom error code 1`] = `
Array [
  "Error code: ",
  <code>
    some_other_error
  </code>,
]
`;

exports[`ValidationErrorMessage renders an error with a title 1`] = `
<span>
  Invalid attribute
  <code>
    onclick
  </code>
</span>
`;

exports[`ValidationErrorMessage renders an error for an unknown error code 1`] = `
Array [
  "Error code: ",
  <code>
    unknown
  </code>,
]
`;

exports[`ValidationErrorMessage renders an error with a custom message 1`] = `null`;
